applications/zabbix/deployment-zabbix-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-server
  namespace: default
  labels:
    app: zabbix-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-server
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: zabbix-server
    spec:
      containers:
      - name: zabbix-server
        image: zabbix/zabbix-server-pgsql:ubuntu-5.0.1
