applications/zabbix/deployment-zabbix-web-nginx-pgsql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-web-nginx-pgsql
  namespace: default
  labels:
    app: zabbix-web-nginx-pgsql
spec:
  replicas: 2
  selector:
    matchLabels:
      app: zabbix-web-nginx-pgsql
  template:
    metadata:
      labels:
        app: zabbix-web-nginx-pgsql
    spec:
      containers:
      - name: zabbix-web-nginx-pgsql
        image: zabbix/zabbix-web-nginx-pgsql:ubuntu-5.2.0
